# screensearch-v2c

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG-ARCHIVE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml
crates/capture/: Cargo.toml
crates/capture/src/: diff.rs  idle.rs  lib.rs  monitors.rs  privacy.rs  wgc.rs
crates/capture/tests/: wgc_smoke.rs
crates/doctor/: Cargo.toml
crates/doctor/src/: lib.rs  main.rs
crates/embeddings/: Cargo.toml
crates/embeddings/src/: lib.rs
crates/inference/: Cargo.toml
crates/inference/examples/: repro_8b.rs
crates/inference/src/: answer.rs  client.rs  download.rs  flags.rs  job_object.rs  lib.rs  models.rs  process.rs  supervisor.rs  vision.rs
crates/inference/tests/: no_orphan.rs  reap.rs  sidecar_client.rs  smoke.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: capture_loop.rs  events.rs  lib.rs  reports.rs  settings.rs  vision_scheduler.rs  worker_pool.rs
crates/kernel/tests/: enrichment.rs  pipeline.rs  settings.rs
crates/ocr/: Cargo.toml
crates/ocr/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: embeddings.rs  frames.rs  insights.rs  jobs.rs  lib.rs  records.rs  schema.rs  search.rs  settings.rs  timeline.rs
crates/store/tests/: perf.rs  store.rs
crates/textfilter/: Cargo.toml
crates/textfilter/src/: lib.rs  tests.rs
crates/traits/: Cargo.toml
crates/traits/src/: contracts.rs  domain.rs  ipc.rs  jobs.rs  lib.rs
docs/: 0.2.0.md  ARCHITECTURE.md  AUDIT_0.2.0_PR7_2026-06-25.md  AUDIT_0.2.0_PR8_2026-06-26.md  AUDIT_V2C_2026-06-23.md  TESTING.md
specs/: 00_PROJECT_INTAKE.md  01_PROJECT_CONTEXT.md  02_STRATEGIC_PLAN.md  03_MASTER_PRODUCTION_SPEC.md  04_CLAUDE_CODE_BUILD_PROMPT.md  05_BUILD_REVIEW.md  06_PATCH_PLAN.md  07_KNOWN_GAPS.md  08_CHANGELOG_AI.md  MODEL_REGISTRY.md  UI_REFERENCE.md
specs/archive/: 05_BUILD_REVIEW.v0.1.0.md  06_PATCH_PLAN.v0.1.0.md  07_KNOWN_GAPS.v0.1.0.md  08_CHANGELOG_AI.v0.1.0.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/tests/: e2e_capture.rs
ui/: eslint.config.js  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
ui/src/: App.tsx  main.tsx  styles.css
ui/src/app/: providers.tsx  router.tsx
ui/src/bindings/: ActivityCount.ts  AnswerDelta.ts  AnswerEvent.ts  AppCount.ts  AppSuppression.ts  AskRequest.ts  CaptureControl.ts  CaptureTick.ts  ComponentReadiness.ts  ComponentStatus.ts  FlashAttnSetting.ts  FrameDetail.ts  FrameMeta.ts  InsightsSummary.ts  JobCompleted.ts  JobKind.ts  JobProgress.ts  JobState.ts  JobStats.ts  KvCacheType.ts  ModelDownloadPhase.ts  ModelDownloadStatus.ts  ModelLane.ts  ModelTier.ts  MonitorInfo.ts  Readiness.ts  ReportKind.ts  ReportProgress.ts  ReportRequest.ts  ReportResponse.ts  SearchHit.ts  SearchQuery.ts  SetModelTier.ts  Settings.ts  SidecarState.ts  SidecarStatus.ts  StorageStats.ts  SuppressReason.ts  TextRole.ts  TextSource.ts  (+7 more)
ui/src/components/: ScreenScaffold.tsx  icons.tsx
ui/src/components/domain/: AnswerStream.tsx  CapturesTrend.tsx  CitationTile.tsx  FrameImage.tsx  FrameTile.tsx  InsightsBars.tsx  JobQueueMeter.tsx  ModelPanel.tsx  ModelTierPicker.tsx  MomentDetail.tsx  PromptCardGrid.tsx  ReportBuilder.tsx  ReportView.tsx  RetentionControl.tsx  ScanlineTimeline.tsx  ScheduleControl.tsx  SearchResult.tsx  TimelineMinimap.tsx  index.ts  timelineDraw.ts
ui/src/components/primitives/: Button.tsx  Chip.tsx  EmptyState.tsx  ErrorState.tsx  Field.tsx  IconButton.tsx  Panel.tsx  Select.tsx  Skeleton.tsx  Toast.tsx  Toggle.tsx  Tooltip.tsx  index.ts
ui/src/components/shell/: AppShell.tsx  CommandPalette.tsx  NavRail.tsx  ReadinessBanner.tsx  StatusRail.tsx
ui/src/lib/: cn.ts  status.ts  time.ts  timeRanges.ts  useAdaptiveBucketCount.ts
ui/src/lib/ipc/: commands.ts  events.ts  frameSrc.ts  mutations.ts  queries.ts  queryKeys.ts  useAsk.ts  useLiveEvents.ts  useReport.ts
ui/src/routes/: Deck.tsx  Insights.tsx  Moment.tsx  NotFound.tsx  Recall.tsx  RouteError.tsx  Settings.tsx  Timeline.tsx
ui/src/state/: toastStore.ts  uiStore.ts
ui/src/styles/: globals.css  tokens.css
