# Workspace root — ScreenSearch V2c
# Layout & dependency rule: see specs/03_MASTER_PRODUCTION_SPEC.md §2.
# `kernel` and module crates depend on `traits` (contracts), never on each
# other's concrete impls. `src-tauri` is the composition root that wires impls.

[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/traits",
    "crates/kernel",
    "crates/store",
    "crates/capture",
    "crates/ocr",
    "crates/embeddings",
    "crates/inference",
    "crates/doctor",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
authors = ["Nicolas Estrem <nicolas.estrem@gmail.com>"]
repository = "https://github.com/nicolasestrem/screensearch-v2c"

# Centralized dependency versions — crates reference these with
# `dep = { workspace = true }` so versions never drift across the workspace.
[workspace.dependencies]
# core async + error handling
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3"

# serialization + typed IPC
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = "10"

# data spine: SQLite (bundled, FTS5) + sqlite-vec (vec0) + stable content hashing.
# `bundled` compiles a recent SQLite so we never depend on a system libsqlite3 on
# Windows; that amalgamation enables FTS5 (and FTS3/RTREE) by default, so the
# porter-tokenized full-text index (03 §4) needs no extra feature. sqlite-vec
# provides the `vec0` virtual table for cosine KNN; blake3 is the chunk
# content-hash change-detector for `embeddings.content_hash`.
rusqlite = { version = "0.40", features = ["bundled"] }
# Pinned to the latest stable (0.1.9). The 0.1.10-alpha line ships a broken
# amalgamation (references sqlite-vec-diskann.c, which isn't in the package).
sqlite-vec = "0.1.9"
blake3 = "1"

# imaging (capture/embeddings share the same image type)
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# logging / observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# internal crates
traits = { path = "crates/traits" }
kernel = { path = "crates/kernel" }
store = { path = "crates/store" }
capture = { path = "crates/capture" }
ocr = { path = "crates/ocr" }
embeddings = { path = "crates/embeddings" }
inference = { path = "crates/inference" }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
