[package]
name = "screensearch"
description = "ScreenSearch V2c — Tauri 2 desktop shell + composition root. See specs/03 §2."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "screensearch_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"

[dependencies]
tauri = { version = "2", features = [] }
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
async-trait.workspace = true
tokio.workspace = true
serde_json.workspace = true
traits.workspace = true
store.workspace = true
kernel.workspace = true
capture.workspace = true
ocr.workspace = true
embeddings.workspace = true
inference.workspace = true
