[package]
name = "kernel"
description = "Orchestrator: typed event bus, worker pool, ModelSupervisor. See specs/03 §1/§5/§6."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
traits.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing.workspace = true
image.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
store.workspace = true
tempfile.workspace = true
