[package]
name = "ocr"
description = "OcrProvider via WinRT Media.Ocr on a COM STA worker. See specs/03 §3."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
traits.workspace = true
