[package]
name = "ocr"
description = "OcrProvider via WinRT Media.Ocr on a COM STA worker. See specs/03 §3, 01 §5/§6."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
traits.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true

# Windows-only by design (04 guardrails). WinRT Media.Ocr + the imaging/buffer
# interop needed to feed it a SoftwareBitmap, on a COM STA thread.
[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Media_Ocr",
    "Graphics_Imaging",
    "Globalization",
    "Security_Cryptography",
    "Storage_Streams",
    "Foundation",
    "Foundation_Collections",
    "Win32_System_Com",
] }

[dev-dependencies]
image.workspace = true
