[package]
name = "store"
description = "Store + JobQueue on SQLite + sqlite-vec + FTS5. See specs/03 §4/§5."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
traits.workspace = true
textfilter.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
rusqlite.workspace = true
sqlite-vec.workspace = true
blake3.workspace = true

[dev-dependencies]
# the fake EmbeddingProvider used to drive the vector arm of hybrid_search in
# tests names `image::RgbaImage` (the trait signature); async-trait + anyhow come
# transitively from the normal dependencies above.
image.workspace = true
tempfile.workspace = true
